--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://pet-adoption-user:ySCS2buKiEer4914@cluster0.mzlni.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://rmushfiq27:GV9Px1gM2TlrU5z5@cluster0.lyimn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 # beeRaw23
 # IF00JxgzEs0RcQON
